@@ -25,7 +25,6 @@ Ensure MariaDB and the needed databases are created and populated
 * `jmxterm-1.0-alpha-4-uber.jar`, downloadable from http://wiki.cyclopsgroup.org/jmxterm.
    * For MAC OSX the 1.0-alpha-4 version of jmxterm has a problem but there is a fix here: https://github.com/jiaqi/jmxterm. You can checkout the latest version and build the jar using mvn clean package.
    * For SDK 17 the 1.0-alpha-4 version of jmxterm has a problem. As a workaround you can add `--add-exports jdk.jconsole/sun.tools.jconsole=ALL-UNNAMED` to Java for jmxterm to make use of the jconsole module.
-* `logrotate`
 * `pgrep`
 * `/usr/lib/sendmail`-compatible mailer, like exim
 
@@ -33,13 +32,12 @@ Ensure MariaDB and the needed databases are created and populated
 * create a "fat"/shaded  jar using:
 `mvn clean install -Prelease`
 * Copy `whois-db/target/whois-db-<version>.jar` to whois root directory and rename to `whois.jar`
-* Copy the files `tools/hazelcast.xml`, `tools/log4j2.xml`, `tools/logrotate.conf`, `tools/whois.init` from the repo to the whois root directory
-* Copy `whois-commons/src/main/resources/whois.properties` from the repo to whois root directory and rename to `properties`
+* Copy the files `tools/hazelcast.xml`, `whois-commons/src/test/resources/log4j2.xml` from the repo to the whois root directory
+* Copy `whois-commons/src/test/resources/whois.properties` from the repo to whois root directory and rename to `properties`
 * Copy downloaded `jmxterm` jar to the Whois root directory.
-* Adjust the configuration variables at the beginning of `whois.init` script as necessary (e.g. user, jmx port, memory usage, JVM path, etc...)
 * Adjust `properties` to match your setup (e.g. JDBC URLs, port numbers, etc...)
    * for the example below we use port.query=1043 and port.api=1080
-* Create the databases WHOIS_LOCAL, MAILUPDATES_LOCAL, dnscheck_local, ACL_LOCAL, INTERNALS_LOCAL.
+* Create the databases WHOIS_LOCAL, MAILUPDATES_LOCAL, ACL_LOCAL, INTERNALS_LOCAL.
 
    For example:
 
@@ -63,13 +61,15 @@ Ensure MariaDB and the needed databases are created and populated
       use INTERNALS_LOCAL;
       source ./whois-commons/src/main/resources/internals_data.sql
 
-* Start whois by executing `./whois.init start`
+* Start whois by executing the following command. Use -Ddump.total.size.limit to specify the dump size:
+
+      /usr/bin/java -Dwhois -Djsse.enableSNIExtension=false -Dcom.sun.management.jmxremote -Dhazelcast.jmx=true -Dcom.sun.management.jmxremote.authenticate=false -Dcom.sun.management.jmxremote.port=1099 -Xms1024m -Xmx8g -Dwhois.config=properties -Duser.timezone=UTC -Dhazelcast.config=hazelcast.xml -Dlog4j.configurationFile=file:log4j2.xml -jar whois.jar
+
    * If the test query for `193.0.0.1` does not result in an inetnum returned, the init script will return a failure. If your database is empty for example, this is normal. You might want to adjust the test whois query to match your needs.
    * Ignore exceptions in the log starting with [DatabaseVersionCheck] Error checking datasource...  
-* Check `var/console.log` for errors or warnings
-* Every 4 hours you'll get the latest lines in `var/console.log` sent to the `OPEREMAIL` defined in the init script
-* Use `./whois.init stop` to stop the server
-* Use `./whois.init jmx` to access the administrative interface exported via JMX
+* The logs will be printed in the console, notifying about the progress
+* Kill the process to stop the server
+* Use `java --add-exports jdk.jconsole/sun.tools.jconsole=ALL-UNNAMED -jar jmxterm-1.0.4-uber.jar -v verbose` to access the administrative interface exported via JMX
 
 ## Load local whois with initial test content
 * for testing purposes, use `source=TEST` in the `properties` file
@@ -78,7 +78,7 @@ Ensure MariaDB and the needed databases are created and populated
   * The file TEST.db contains an initial set of RPSL objects used for testing purposes.
 * while the server is running, use JMX to load the database with the content of TEST.db:
 
-      ./whois.init jmx
+      java --add-exports jdk.jconsole/sun.tools.jconsole=ALL-UNNAMED -jar jmxterm-1.0.4-uber.jar -v verbose
       bean net.ripe.db.whois:name=Bootstrap
       run loadDump comment TEST.db
 
